; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/virtio/extr_virtgpu_fence.c_virtio_fence_value_str.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/virtio/extr_virtgpu_fence.c_virtio_fence_value_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_fence = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"%llu\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dma_fence*, i8*, i32)* @virtio_fence_value_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @virtio_fence_value_str(%struct.dma_fence* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.dma_fence*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.dma_fence* %0, %struct.dma_fence** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i8*, i8** %5, align 8
  %8 = load i32, i32* %6, align 4
  %9 = load %struct.dma_fence*, %struct.dma_fence** %4, align 8
  %10 = getelementptr inbounds %struct.dma_fence, %struct.dma_fence* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @snprintf(i8* %7, i32 %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %11)
  ret void
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
